--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ body {
 .container{
     width: min(1440px, var(--container--width-md));
     margin-inline: auto;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* background: red; */
 }
 .inner__container{
